<resources>
    <string name="app_name">OpenEvents</string>
    <string name="token_preference_file">LoginToken</string>
    <string name="saved_user_preference_file">SavedUser</string>

    <string name="no_error" />
    <string name="bad_response">Error. Bad Server Response</string>
    <string name="unreachable_server">Error. Unreachable server</string>
    <string name="internal_app_error">Error. Internal App Error</string>

    <string name="incorrect_name_format">Error. The name or surname are not correct</string>
    <string name="incorrect_email_format">Error. The email is not correct</string>
    <string name="incorrect_password_format">Error. The password must contain 8 characters, numbers, uppercase and lowercase letters</string>
    <string name="incorrect_user_image_format">Error with the user image. Please, introduce a valid image</string>
    <string name="passwords_dont_match">Error. The passwords don\'t match!</string>
    <string name="incorrect_login">Error. Either the email or the password are incorrect</string>
    <string name="successful_register">Register was successful!</string>

    <string name="login">Log In</string>
    <string name="register">Sign up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="user_image">User Image</string>

    <string name="no_account">Don\'t have an account? </string>
    <string name="sign_up">Sign up.</string>
    <string name="already_account">Already have an account? </string>
    <string name="log_in">Log in.</string>
    <string name="log_out">Log Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="all_events">All Events</string>
    <string name="best_events">Best Rated</string>
    <string name="upcoming_events">Upcoming</string>
    <string name="today_events">Today</string>
    <string name="ended_events">Already Ended</string>

    <string name="event_name">event</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="score">Score</string>
    <string name="comments">Comments</string>
    <string name="see_comments">See comments</string>
    <string name="see_assistants">See assistants</string>
    <string name="top_percentage">Top %</string>
    <string name="friends">Friends</string>
    <string name="num_events">Events Created</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="message">Message</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="to">to</string>
    <string name="event_location">Location</string>
    <string name="event_date">Date</string>
    <string name="description">Description</string>
    <string name="score_emoji">⭐</string>
    <string name="time_emoji">⌛</string>
    <string name="location_emoji">🗺️</string>
    <string name="description_emoji">📋</string>
    <string name="type_emoji">💣</string>
    <string name="slug_emoji">📝️</string>
    <string name="assistants_emoji">🙍</string>
    <string name="assistants">Assistants</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="assist">Assist</string>
    <string name="remove_assistance">Remove Assistance</string>
    <string name="new_assistance">Congratulations! You\'re now an Assistant of this Event</string>
    <string name="removed_assistance">Your assistance for this Event has been removed successfully</string>

    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="event_num">EVENT#1</string>

    <string name="add_event_name">Name</string>
    <string name="add_event_image">Image URL</string>
    <string name="add_event_start">Start Date</string>
    <string name="add_event_end">End Date</string>
    <string name="add_event_location">Location</string>
    <string name="add_event_participants">Max. Participants</string>
    <string name="add_event_description">Description</string>
    <string name="add_event_type">Type</string>
    <string name="add_event_slug">Slug</string>
    <string name="new_event">New Event</string>
    <string name="update_event">Update Event</string>
    <string name="event_error">Error. Please, fill al the fields correctly</string>
    <string name="successful_event_creation">The event has been created successfully!</string>
    <string name="successful_event_update">The event has been updated successfully!</string>
    <string name="successful_event_deletion">The event has been deleted successfully!</string>
    <string name="successful_profile_update">Your profile has been updated successfully!</string>
    <string name="cancel">Cancel</string>


    <string name="users_search">Users</string>
    <string name="events_search">Events</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="no_longer_friends">Success! This user is no longer friend of yours.</string>
    <string name="friend_request_sent">The Friend request has been sent!</string>
    <string name="new_friend">Friend request accepted! You\'re now friends</string>
    <string name="declined_request">Friend request declined successfully!</string>


    <string name="add_comment">Add a comment…</string>
    <string name="add">Add</string>
    <string name="post">POST</string>
    <string name="update">UPDATE</string>
    <string name="my_assistances">My Assistances</string>



    <string name="chats">Chats</string>
    <string name="write_message">Write a message</string>
    <string name="send">Send</string>

</resources>