<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:id="@+id/add_event_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_event"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/add_event_img"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/empty_event"
            android:contentDescription="@string/user_image"
            app:civ_circle_color="@color/light_grey"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/add_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/add_event_name"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="12dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/add_event_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/add_event_image"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="12dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/add_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/add_event_description"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/add_event_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/add_event_start"
            android:importantForAutofill="no"
            android:inputType="text"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <EditText
            android:id="@+id/add_event_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/add_event_end"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <EditText
            android:id="@+id/add_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/add_event_location"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/add_event_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/add_event_participants"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/add_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/add_event_type"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/add_event_slug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/add_event_slug"
            android:background="@drawable/bg_edittext"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            android:inputType="text" />


        <Button
            android:id="@+id/add_event_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add"
            android:layout_gravity="center"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/add_event_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:textColor="@color/primary_red"/>

    </LinearLayout>


</ScrollView>