<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="26"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="#66000000"
        android:gravity="center">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:weightSum="6">

        <ImageButton
            android:id="@+id/fragment1"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/search"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_search_light"
            android:contentDescription="@string/search" />

        <ImageButton
            android:id="@+id/add_event"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_add_event"
            android:contentDescription="@string/add_event_name" />

        <ImageButton
            android:id="@+id/friends"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_event"
            android:contentDescription="@string/all_events"
            />

        <ImageButton
            android:id="@+id/fragemnt2"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/profile"/>
    </LinearLayout>


</LinearLayout>