<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="20">



        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_event_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_event_name"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"                android:gravity="center" />

            <EditText
                android:id="@+id/add_event_start"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:hint="@string/add_event_start" />

            <EditText
                android:id="@+id/add_event_end"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_event_end"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"                android:gravity="center" />

            <EditText
                android:id="@+id/add_event_location"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_event_location"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"                android:gravity="center" />
            <EditText
                android:id="@+id/add_event_participants"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_event_participants"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center" />
            <EditText
                android:id="@+id/add_event_type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_event_type"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center" />
            <EditText
                android:id="@+id/add_event_description"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_event_description"
                android:background="@drawable/bg_edittext"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/post_btn"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:text="POST"
            android:textSize="20dp" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="CANCEL"
            android:textSize="20dp" />

    </LinearLayout>

    </LinearLayout>

</FrameLayout>