<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragments.MyAssistancesFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_assistances"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="13dp"/>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/myevents_future"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_events"
                android:gravity="center"
                android:paddingTop="5sp"
                android:paddingBottom="10sp"
                android:background="@drawable/bg_bottom_selected">
            </TextView>
            <TextView
                android:id="@+id/myevents_ended"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:text="@string/ended_events"
                android:gravity="center"
                android:paddingTop="5sp"
                android:paddingBottom="10sp">
            </TextView>
        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_events_recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>